Fix Cutoff Post Text on Safari

--- a/css/forum.css
+++ b/css/forum.css
@@ -1380,7 +1380,7 @@ img-crop canvas {
   width: 35px;
   height: 30px;
   margin: 0 15px;
-  font-size: 17px;
+  font-size: 16px;
   font-weight: 600;
   color: rgb(211,214,215);
   float: right;
